fixed nte